feat: add new architecture scaffolding
Co-authored-by: EnricoMazzu <23503390+EnricoMazzu@users.noreply.github.com>